# flare-commander

./: .prettierrc  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: generate-icons.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/authentication/: authentication_commands.rs  authentication_models.rs  authentication_service.rs  mod.rs
src-tauri/src/cloudflare/: account_details.rs  kv.rs  mod.rs
src-tauri/src/cloudflare/account/: account_client.rs  account_models.rs  mod.rs
src-tauri/src/cloudflare/common/: common_models.rs  constants.rs  mod.rs
src-tauri/src/cloudflare/kv/: kv.rs  kv_client.rs  kv_models.rs  mod.rs  utils.rs
src-tauri/src/cloudflare/user/: mod.rs  user_client.rs  user_models.rs
src-tauri/src/common/: common_models.rs  common_utils.rs  mod.rs
src-tauri/src/kv/: kv_commands.rs  kv_models.rs  kv_service.rs  mod.rs
src-tauri/src/test/: test_models.rs
src/authentication/: auth-errors.ts  auth-models.ts  auth-provider.tsx  login-form.tsx  login-page.tsx  protected-page.tsx  use-auth.ts
src/common/: account-sidebar-menu.tsx  common-errors.ts  common-hooks.ts
src/components/ui/: button.tsx  calendar.tsx  data-table.tsx  date-time-picker.tsx  dialog.tsx  loading-spinner.tsx  popover.tsx  sheet.tsx  sidebar.tsx  table.tsx  text-file-input.tsx
src/features/account/components/: account-sidebar-menu.tsx
src/features/account/lib/: account-utils.ts
src/features/authentication/: auth-models.ts
src/features/authentication/components/: auth-provider.tsx  login-form.tsx  login-forms.tsx  protected-page.tsx
src/features/authentication/hooks/: use-auth.ts
src/features/kv/: kv-models.ts
src/features/kv/components/: kv-item-create-sheet.tsx  kv-item-update-sheet.tsx  kv-namespace-create-sheet.tsx  kv-namespace-details.tsx  kv-namespace-update-sheet.tsx  kv-pair-create-sheet.tsx  kv-pair-update-sheet.tsx  kv-sidebar-group.tsx
src/features/kv/components/table/: kv-table-body.tsx  kv-table-header.tsx  kv-table-utils.ts  kv-table.tsx
src/features/kv/hooks/: kv-hooks.ts  use-kv-keys.ts  use-kv-namespaces.ts  use-kv-pair.ts  use-kv-pairs.ts  use-namespaces.ts
src/features/kv/lib/: kv-utils.ts
src/hooks/: use-error.ts  use-error.tsx  use-local-storage.ts
src/kv/: kv-hooks.ts  kv-item-create-sheet.tsx  kv-item-details.tsx  kv-item-sheet.tsx  kv-item-update-sheet.tsx  kv-item-write-sheet.tsx  kv-models.ts  kv-namespace-create-sheet.tsx  kv-namespace-details.tsx  kv-namespace-update-sheet.tsx  kv-sidebar-group.tsx  kv-utils.ts
src/kv/table/: kv-table-body.tsx  kv-table-header.tsx  kv-table-utils.ts  kv-table.tsx
src/login/: Login.tsx  login-page.tsx
src/main/: main-page.tsx
src/pages/: login-page.tsx  main-page.tsx
