[package]
name = "flare-commander"
version = "0.1.0"
description = "A Tauri App"
authors = ["Christian Binzer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flare_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
cloudflare = { version = "0.14.0" }
log = "0.4.27"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-opener = "2.2.4"
tauri-plugin-log = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["multipart"] }
tokio = { version = "1.44.2", features = ["macros"] }
url = "2.5.4"
percent-encoding = "2.3.1"
futures = "0.3.31"

[dev-dependencies]
wiremock = "0.6.3"
