[package]
name = "flare-commander"
version = "0.2.0"
description = "A simple GUI tool to manage Cloudflare KV namespaces and keys."
authors = ["Christian Binzer"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flare_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
log = "0.4.27"
tauri = { version = "2.7.0", features = [] }
tauri-plugin = "2.3.1"
tauri-plugin-opener = "2.4.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["multipart", "json"] }
tokio = { version = "1.47.1", features = ["macros"] }
percent-encoding = "2.3.1"

[dev-dependencies]
wiremock = "0.6.4"
